--- a/index.html
+++ b/index.html
@@ -1,4 +1,49 @@
 ---
+layout: home
+title: Precious Anyanwu
+---
+
+# Precious Anyanwu
+
+**SOC & Cloud Security Enthusiast**  
+Linux • AWS Security • Security Monitoring • Incident Analysis  
+
+---
+
+## 👋 Welcome
+
+I am an aspiring cybersecurity professional with a focused interest in **Security Operations (SOC)** and **Cloud Security**. I have a technical background in telecoms Radio Access Network (RAN) operations and data annotation for machine learning workflows.
+
+My experience includes network monitoring, fault analysis, infrastructure awareness, and structured data labeling with strong attention to detail. I am currently building hands-on projects in Linux security, SOC-style email and log analysis, and AWS security configurations.
+
+This site documents my learning journey, practical labs, and security-focused projects as I prepare for entry-level and junior SOC or Cloud Security roles.
+
+---
+
+## 🔐 Areas of Focus
+- SOC workflows and alert analysis  
+- Email and phishing investigation  
+- Cloud security fundamentals (AWS)  
+- Linux security and system monitoring  
+- Network traffic analysis for security  
+
+---
+
+## 📂 Projects
+Selected hands-on projects and labs:
+
+- **SOC Email Analysis** – Email header analysis and phishing investigation  
+- **AWS Security Fundamentals** – IAM, logging, and monitoring  
+- **Linux Security Monitoring** – System hardening and log analysis  
+
+(Full documentation available on my GitHub repositories.)
+
+---
+
+## 📫 Contact
+- GitHub: https://github.com/precious-anyanwu  
+- LinkedIn: *(coming soon)*  
+---
 # Feel free to add content and custom Front Matter to this file.
 # To modify the layout, see https://jekyllrb.com/docs/themes/#overriding-theme-defaults
 
